updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-<<<<<<< HEAD
+#virtual environment
 careerGuidance
-=======
+
+
 # Miscellaneous
 *.class
 *.log
@@ -45,5 +46,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
->>>>>>> second-repo/main
     
