--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_auth: ^4.9.0
   google_fonts: ^5.1.0
   firebase_database: ^10.2.5
+  http: ^1.1.0
+  animated_splash_screen: ^1.2.0
   
 
 dev_dependencies:
